navbar added for different screen sizes

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   --primary-light: #709dff;
 }
 
+.icon {
+  color: var(--primary-dark);
+}
+
 @layer base {
   body {
     @apply font-[Poppins];
@@ -31,5 +35,8 @@
 
   button {
     @apply p-3 border bg-gradient-to-r from-[var(--primary-dark)] to-[var(--primary-light)] text-white rounded-md;
+  }
+  .icon {
+    @apply text-2xl cursor-pointer;
   }
 }
